# sofa

./: .clang-format  .codespellrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .qmake.cache  Authors.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  Doxyfile.git  Doxyfile.in  GUIDELINES.md  LICENCE.txt  Project Linux.sh  Project MacOS.sh  Project VC10.bat  Project VC10_BuildServer.bat  Project VC10_BuildServer_CMake.bat  Project VC10_x64.bat  Project VC11_x64_BuildServer_CMake.bat  Project VC9.bat  Project VC9_x64.bat  README.md  Sofa.files  Sofa.includes  Sofa.pro  TODO.md  changelog.txt  config.bat  config.sh  config_VC8.bat  config_VC9.bat  custom.cmake.example  dependencies.pri  doxygen packages.txt  (+27 more)
Component/: CMakeLists.txt
Component/AnimationLoop/: CMakeLists.txt  Sofa.Component.AnimationLoopConfig.cmake.in
Component/Collision/: CMakeLists.txt
Component/Compat/: CMakeLists.txt  Sofa.Component.AnimationLoop.cmake  Sofa.Component.Collision.Detection.Intersection.cmake  Sofa.Component.Collision.Geometry.cmake  Sofa.Component.Collision.Model.cmake  Sofa.Component.Collision.Response.Contact.cmake  Sofa.Component.Constraint.Lagrangian.Model.cmake  Sofa.Component.Constraint.Lagrangian.Solver.cmake  Sofa.Component.Constraint.Lagrangian.cmake  Sofa.Component.Diffusion.cmake  Sofa.Component.Engine.Data.cmake  Sofa.Component.Engine.Geometry.cmake  Sofa.Component.Engine.Math.cmake  Sofa.Component.Engine.Mesh.cmake  Sofa.Component.Engine.ROI.cmake  Sofa.Component.Engine.Rigid.cmake  Sofa.Component.Engine.Transform.cmake  Sofa.Component.LinearSolver.Iterative.cmake  Sofa.Component.LinearSolver.Preconditioner.cmake  Sofa.Component.Mapping.cmake  Sofa.Component.Mass.cmake  Sofa.Component.ODESolver.Backward.cmake  Sofa.Component.SceneUtility.cmake  Sofa.Component.SolidMechanics.FEM.Damping.cmake  Sofa.Component.SolidMechanics.Spring.cmake  Sofa.Component.StateContainer.cmake  Sofa.Component.Topology.Container.Grid.cmake  Sofa.Component.Topology.Mapping.cmake  Sofa.Component.UserInteraction.ConfigurationSetting.cmake  Sofa.Component.UserInteraction.Performer.cmake  Sofa.Component.Utility.cmake  Sofa.GL.Component.Rendering2D.cmake
Component/Constraint/: CMakeLists.txt
Component/Container/: CMakeLists.txt
Component/Controller/: CMakeLists.txt
Component/Diffusion/: CMakeLists.txt
Component/Engine/: CMakeLists.txt
Component/IO/: CMakeLists.txt  Sofa.Component.IOConfig.cmake.in
Component/LinearSolver/: CMakeLists.txt  Sofa.Component.LinearSolverConfig.cmake.in
Component/Mapping/: CMakeLists.txt  Sofa.Component.MappingConfig.cmake.in
Component/Mass/: CMakeLists.txt  Sofa.Component.MassConfig.cmake.in
Component/MechanicalLoad/: CMakeLists.txt
Component/ODESolver/: CMakeLists.txt
Component/Playback/: CMakeLists.txt  Sofa.Component.PlaybackConfig.cmake.in
Component/SceneUtility/: CMakeLists.txt  Sofa.Component.SceneUtilityConfig.cmake.in
Component/Setting/: CMakeLists.txt
Framework/: CMakeLists.txt
GUI/: CMakeLists.txt
Sofa/: CMakeLists.txt
SofaAdvanced/: CMakeLists.txt  SofaAdvanced.cmake.in  SofaAdvanced.h.in  SofaAdvancedConfig.cmake.in  SofaAdvancedConfig.h.in  config.h.in
SofaBase/: CMakeLists.txt  SofaBase.h.in  SofaBaseConfig.cmake.in  SofaBaseConfig.h.in  config.h.in
SofaCommon/: CMakeLists.txt  SofaCommon.config.in  SofaCommon.h.in  SofaCommonConfig.cmake.in  SofaCommonConfig.h.in  config.h.in
SofaDeps/: CMakeLists.txt
SofaFramework/: CMakeLists.txt  CMakeParseLibraryList.cmake  CMakeSofaCreateTarget.cmake  SofaFramework.h.in  SofaFrameworkCPack.cmake  SofaFrameworkConfig.cmake.in  SofaMacros.cmake  SofaPackageConfigHelpers.cmake  config.h.in
SofaGeneral/: CMakeLists.txt  SofaGeneral.h.in  SofaGeneralConfig.cmake.in  SofaGeneralConfig.h.in  config.h.in
SofaGui/: CMakeLists.txt  SofaGui.h.in  SofaGuiConfig.cmake.in  SofaGuiConfig.h.in  config.h.in
SofaKernel/: CMakeLists.txt  LICENCE.txt
SofaMisc/: CMakeLists.txt  SofaMisc.h.in  SofaMiscConfig.cmake.in  SofaMiscConfig.h.in  config.h.in
SofaNG/: CMakeLists.txt
SofaPlugins/: CMakeLists.txt
SofaSimulation/: CMakeLists.txt  SofaSimulation.config.in  SofaSimulation.h.in  SofaSimulationCPack.cmake  SofaSimulationConfig.cmake.in  config.h.in
applications/: CMakeLists.txt  GPL-license.txt  copyright.txt
cmake/: CMakeLists.txt  CompilerOptions.cmake  FindCGAL.cmake  FindCUDASparse.cmake  FindGLEW.cmake  FindGMP.cmake  FindH3DUtil.cmake  FindHAPI.cmake  FindMETIS.cmake  FindMPFR.cmake  FindMPI.cmake  FindOPENGL.cmake  FindOpenCL.cmake  FindOpenCascade.cmake  FindOpenHaptics.cmake  FindOptiX.cmake  FindPTHREAD.cmake  FindPackageHandleStandardArgs.cmake  FindSOFA.cmake  SofaBuildFlags.cmake  buildFlags.cmake  computeDependencies.cmake  configuration.cmake  custom_options.cmake  custom_options.cmake.example  dependencies.cmake  doxygen.cmake  environment.cmake  externals.cmake  findSofaDefines.cmake  find_lib.cmake  functions.cmake  initDependencies.cmake  options.cmake  post-config.cmake  post.cmake  postBuildConfig.cmake  postMainSolution.cmake  postProject.cmake  postSolution.cmake  (+7 more)
examples/: .scene-tests  CMakeLists.txt  RegressionStateScenes.regression-tests  RegressionTopologyScenes.regression-tests  beam6D.scn  beam6D.scn.view  demo10.scn  demo2.scn  demo3.scn  demo4.scn  demo5.scn  demo6.scn  demo6Triangle.scn  demo7.scn  demo7Triangle.scn  demo8.scn  demo8Triangle.scn  demo9.scn  edgeSetController.scn  liverToonShading.scn  manWalking.scn  matrixMass.scn  simpleShader.frag  softArticulations.scn  softArticulationsSkinned.scn  sparseGrid.scn  test_sleep.scn  test_sleep2.scn  test_sleep3.scn  tutorial1.scn  tutorial2.scn  tutorial3.scn  tutorial4.scn  tutorial4FEM.scn
extlibs/: CMakeLists.txt  boost.prf  flowvr.prf  glew.prf  glut.prf  libpng.prf  libxml.prf  metis.prf  zlib.prf
framework/: CMakeLists.txt  SofaFramework.config.in  SofaFrameworkConfig.cmake.in  copyright.txt  doc.h
modules/: CMakeLists.txt  LGPL-license.txt  copyright.txt
share/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  tests.pro
(+33383 files in other folders)
